[gd_scene load_steps=12 format=3 uid="uid://dlm3mdmcnwnyj"]

[ext_resource type="Script" path="res://scripts/enemies/slime.gd" id="1_a88fg"]
[ext_resource type="Texture2D" uid="uid://dq58aklpdg1ag" path="res://assets/enemies/slime/slime_idle0000.png" id="1_ky4dx"]
[ext_resource type="Texture2D" uid="uid://b2ru21erx6wei" path="res://assets/enemies/slime/slime_run0000.png" id="2_7btq3"]
[ext_resource type="Texture2D" uid="uid://d0mj71ob1xpfs" path="res://assets/enemies/slime/slime_run0003.png" id="3_q1f46"]
[ext_resource type="Texture2D" uid="uid://c4odxcqkum7p" path="res://assets/enemies/slime/slime_run0006.png" id="4_kvjae"]
[ext_resource type="Texture2D" uid="uid://bwm0ryosrj1kq" path="res://assets/enemies/slime/slime_surprised0015.png" id="5_ydx4j"]
[ext_resource type="Texture2D" uid="uid://dbg8kson8hfhr" path="res://assets/enemies/slime/slime_surprised0018.png" id="6_0v306"]
[ext_resource type="Texture2D" uid="uid://1ividt2k4b1" path="res://assets/enemies/slime/slime_surprised0021.png" id="7_6xeio"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uvyte"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ky4dx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7btq3")
}, {
"duration": 1.0,
"texture": ExtResource("3_q1f46")
}, {
"duration": 1.0,
"texture": ExtResource("4_kvjae")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ydx4j")
}, {
"duration": 1.0,
"texture": ExtResource("6_0v306")
}, {
"duration": 1.0,
"texture": ExtResource("7_6xeio")
}, {
"duration": 1.0,
"texture": ExtResource("6_0v306")
}, {
"duration": 1.0,
"texture": ExtResource("7_6xeio")
}],
"loop": false,
"name": &"surprised",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5mf3"]
size = Vector2(80, 56)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_x5on5"]
a = Vector2(40, 0)
b = Vector2(-192, 0)

[node name="slime" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_a88fg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_uvyte")
animation = &"surprised"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_t5mf3")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("SegmentShape2D_x5on5")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_area_2d_body_exited"]
